feat: 펫 카탈로그 배경 에셋 제거
